@@ -1,3 +1,9 @@
+2010-12-23  Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/Rcpp/RObject.h: New internal class SEXPstack to handle 
+	garbage collection. Presumably more efficient than R_PreserveObject and
+	R_ReleaseObject
+
 2010-12-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/unitTests/runit.Vector.R: Applied patch by Christian Gunning
